--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".SubmitActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".OtherProfileActivity" />
     </application>
 
 </manifest>
